--- a/src/sass/blocks/_button.scss
+++ b/src/sass/blocks/_button.scss
@@ -21,4 +21,10 @@
       color: #ffffff;
       font-size: 16px;
    }
+   &_mini {
+      width: 131px;
+      height: 40px;
+      border-radius: 5px;
+      background-color: $main_color; 
+   }
 }
