--- a/src/sass/blocks/_titles.scss
+++ b/src/sass/blocks/_titles.scss
@@ -6,4 +6,11 @@
       max-width: 710px;
       text-align: left;
    }
+   &_catalog {
+      color: black;
+      text-align: center;
+      color: #0d0d0d;
+      font-size: 30px;
+      font-weight: 700;
+   }
 }
