--- a/src/sass/blocks/_carousel.scss
+++ b/src/sass/blocks/_carousel.scss
@@ -1,25 +1,26 @@
 .carousel {
    padding: 81px 0;
-   &__inner{
-      position: relative;
-      width: 750px;
-      margin: 0 auto;
+   &__inner {
+   position: relative;
+   width: 750px;
+   height: 580px;
+   margin: 0 auto;
    }
-   .slick-prev, .slick-next {
-      position: absolute;
-      top: 50%;
-      transform: translateY(-50%);
-      left: -66px;
+   .slick-prev {
       border: none;
       background-color: #fff;
-      img {
-         width: 31px;
-         height: 50px;
-      }
+      position: absolute;
+      transform: translateY(-50%);
+      top: 50%;
+      left: -66px;
    }
    .slick-next {
+      border: none;
+      background-color: #fff;
+      position: absolute;
+      transform: translateY(-50%);
+      top: 50%;
       right: -66px;
-      left: auto;
    }
+   
 }
-
