--- a/src/sass/blocks/_consultation.scss
+++ b/src/sass/blocks/_consultation.scss
@@ -8,23 +8,16 @@
       font-size: 20px;
       font-weight: 500;
    }
-   &__form {
-      margin-top: 35px;
-      display: flex;
-      flex-direction: column;
-      align-items: flex-start;
-      max-width: 300px;
-      &:nth-child(3) {
-         margin-bottom: 20px;
-      }
-      input {
-         margin-bottom: 15px;
-         width: 300px;
-         height: 50px;
-         border-radius: 5px;
-         background-color: #ffffff;
-         padding: 0 20px;
-         border: none;
-      }
+   .error {
+      color: seashell;
+      border: 1px solid red;
    }
+   label.error {
+      border: none;
+      display: block;
+      margin: 0 auto;
+      text-align: center;
+      margin-bottom: 10px;
+   }
+   
 }
