--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,4 +1,4 @@
-* {
+html {
    font-family: 'Museo Sans', sans-serif;
  }
 
@@ -14,5 +14,11 @@
  @import 'blocks/advantages';
  @import 'blocks/consultation';
  @import 'blocks/titles';
- @import 'base/media';
  @import 'blocks/carousel';
+ @import 'blocks/catalog';
+ @import 'blocks/reviews';
+ @import 'blocks/footer';
+ @import 'blocks/modal';
+ @import 'blocks/form';
+ @import 'base/media';
+
